
=head1 ACKNOWLEDGEMENTS

Extra Thanks to:

Andreas Koenig <andreas.koenig@franz.ww.tu-berlin.de>
for *lots* of bug spotting, fixing and patching, 
Apache::Registry and CGI.pm overhaul efforts (aka CGI::XA &
CGI::Switch) 

Gisle Aas <aas@sn.no>
For getting this effort started and many contributions since 

Other contributors are mentioned below.

=head1 CHANGES

=over 3

=item 1.11_01-dev

Various fixes and improvements to the APACI support:

 - Added support for PERL_THREADS to apaci stuff.  
   This is needed under the bleeding edge Perl's 
   (e.g. 5.004_6X).
 - Avoid more unnecessary file copies and edits under 
   APACI situation. 
 - Cleanup the PERL_XXX hooks in apaci/mod_perl.config[.sh]
 [Ralf S. Engelschall]

 - Add additional .xs.o target to apaci/Makefile.tmpl to
   workaround braindead Makes.
 [Brian P Millett <bpm@ec-group.com>]

if $r->subprocess_env is called in a void context just call
(void)perl_cgi_env_init(r)

$ENV{PATH}: don't let perl_clear_env() clear it's value

prevent $r->dir_config SEGV if called during ChildInit, 
spotted by Lincoln Stein

add a dTHR to perl_util.c for threaded 5.004_66
[Brian P Millett <bpm@ec-group.com>] 

added $r->get_server_port method

sfio read will now call Apache::read, as it should.  
Thanks to Steve Farrell for the spot

added $r->last method

$r->cgi_env when called in a void context will simply setup the
subprocess_env table 

avoid some possible warnings in Apache.pm [Brian Mosley <ix@maz.org>]

added $r->request_time method

fix bug when PERL_MARK_WHERE was undefined spotted by Kermit Tensmeyer

emulate pre-1.3b6 r->uri/r->proxyreq behavior for proxy requests
inside the post_read_request_handler and add t/internal/proxy test 

added additional installation document INSTALL.apaci which
describes the new APACI stuff (including background information).
[Ralf S. Engelschall <rse@engelschall.com>]

added new (but still optional!) Apache 1.3 support via the new Apache